// Kademlia Protocol messages
syntax = "proto3";
package kadproto;

service Kademlia {
    rpc Ping(PingM) returns (PingM) {}
    rpc Store(StoreReq) returns(StoreRepl) {}
    rpc Find_Node(FNodeReq) returns(FNodeRepl) {}
    rpc Find_Value(FValueReq) returns(FValueRepl) {}
}

message PingM {
    string cookie = 1; // "Magic cookie" used to track this exact ping request
    bytes id = 2;
}

message StoreReq {
    string cookie = 1;
}

message StoreRepl {
    string cookie = 1;
}

message FNodeReq {
    string cookie = 1;
    optional contact node = 2;
}

message FNodeRepl {
    string cookie = 1;
    repeated contact knode = 2;
}

message FValueReq {
   string cookie = 1;
}

message FValueRepl {
    string cookie = 1;
}

message contact {
    bytes uid = 1;
    string ip = 2;
    int32 port = 3;
}